Fix. fixed login and logout buttons visibility

--- a/styles/doboard-widget.css
+++ b/styles/doboard-widget.css
@@ -174,7 +174,6 @@
     border-bottom: 1px #EBF0F4 solid;
     padding: 0 16px;
     height: 52px;
-    margin-top: 10px;
 }
 
 .doboard_task_widget-content {
